--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/node": "20.7.1",
     "@types/react": "18.2.23",
     "@types/react-dom": "18.2.8",
+    "canvas": "^2.11.2",
     "eslint-config-next": "13.5.3",
+    "konva": "^9.2.1",
     "next": "13.5.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-konva": "^18.2.10",
     "typescript": "5.2.2"
   },
   "devDependencies": {
