--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-konva": "^18.2.10",
+    "rgb-hex": "^4.1.0",
     "styled-components": "^5.3.11",
     "typescript": "5.2.2"
   },
